[gd_scene load_steps=5 format=2]

[ext_resource path="res://mocraAdventure/object_cards/script.gd" type="Script" id=1]
[ext_resource path="res://cards/collection_backgrounds/Mythical.png" type="Texture2D" id=2]
[ext_resource path="res://cards/avatar/Turtle.png" type="Texture2D" id=3]
[ext_resource path="res://Theme/Theme.tres" type="Theme" id=4]

[node name="Node2D" type="Control"]
custom_minimum_size = Vector2( 250, 300 )
script = ExtResource( 1 )

[node name="backround" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource( 2 )

[node name="Avatar" type="Sprite2D" parent="."]
position = Vector2( 125, 70 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="EffectLabel" type="Label" parent="."]
offset_left = 89.0
offset_top = 129.0
offset_right = 165.0
offset_bottom = 155.0
theme = ExtResource( 4 )
text = "EFFECT"

[node name="EffectVar" type="Label" parent="EffectLabel"]
offset_left = -71.1881
offset_top = 21.6659
offset_right = -31.1881
offset_bottom = 47.6659

[node name="CooldownLabel" type="Label" parent="."]
offset_left = 63.0
offset_top = 217.0
offset_right = 191.0
offset_bottom = 243.0
grow_horizontal = 2
theme = ExtResource( 4 )
text = "COOLDOWN"

[node name="CooldownVar" type="Label" parent="CooldownLabel"]
offset_left = -41.0105
offset_top = 27.0824
offset_right = -1.01053
offset_bottom = 53.0824
